[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxio"
dynamic = ["version"]
description = "A wrapper for the proxmox api"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Roger Brinkmann", email = "rogerbrinkmann@gmail.com" },
]
keywords = [
    "utility", "cli", "example"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "hatch>=1.14.2",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]

[tool.hatch.version]
path = "proxio/__init__.py"

[project.urls]
Homepage = "https://github.com/rogerbrinkmann/proxio"
Source = "https://github.com/rogerbrinkmann/proxio"

[project.scripts]
my-cli = "proxio:main"

[tool.pytest.ini_options]
python_files = "tests/*.py"

[tool.coverage.run]
source = ["proxio"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
